Doc of bash compile functions